--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,9 +2,11 @@
 @import './components/sections';
 @import './components/footer';
 @import './components/modal-window';
+@import './components/mobile-menu';
 
 @import './utils/valiable';
 @import './utils/hidden';
+@import './utils/mixins';
 
 @import './base/common';
 
