--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -1,10 +1,27 @@
 .footer {
     background-color: #2f303a;
-    padding-top: 60px;
-    padding-bottom: 60px;
+    @media screen and(min-width:480px){
+      height: 606px;
+    }
+    @media screen and(min-width:768px){
+      height: 463px;
+    }
+    @media screen and(min-width:1200px){
+      height: 252px;
+    }
   }
   
   .foot-cont {
-    display: flex;
-    align-items: baseline;
+    // display: flex;
+    // align-items: baseline;
+    @media screen and(min-width:480px){
+     
+    }
+    @media screen and(min-width:768px){
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-around;
+      align-items: baseline;
+
+    }
   }
