--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -21,6 +21,7 @@
         pointer-events: none;
         visibility: hidden;
       }
+      
     }
   
  
@@ -95,6 +96,10 @@
     
       transition: outline-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
       border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+      @media screen and(max-width:1199px){
+        width: 370px;
+      }
     }
     &-input:hover,
     &-input:focus{
@@ -102,6 +107,10 @@
       outline-color: rgba(33, 150, 243, 1) ;
     }
     
+    @media screen and(max-width:1199px){
+        width: 450px;
+        height: 609px;
+      }
   }
   
   
@@ -188,6 +197,9 @@
     
       color: rgba(117, 117, 117, 0.5);
     }
+    @media screen and(max-width:1199px){
+        width: 370px;
+      }
   }
 
   
@@ -225,6 +237,7 @@
       background-repeat: no-repeat;
       background-position: center;
     }
+    
   }
  
   
