--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -1,41 +1,107 @@
+
+
 .hero {
-    padding-top: 200px;
-    padding-bottom: 200px;
-    background-color: #2f303a;
-    text-align: center;
-    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
-      url(../images/hero-bg.jpg);
-    max-width: 1600px;
-    max-height: 600px;
-    margin-left: auto;
-    margin-right: auto;
-    background-repeat: no-repeat;
+  padding-top: 200px;
+  padding-bottom: 200px;
+  background-color: #2f303a;
+  text-align: center;
+  
+  max-width: 1600px;
+  max-height: 600px;
+  margin-left: auto;
+  margin-right: auto;
+  background-repeat: no-repeat;
+
+  @media screen and(max-width:480px){
+    width: 480px;
+    height: 400px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    // url(../images/hero-bg-mob.jpg);
+    @media (min-device-screen-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-bg-mob2x.jpg);
+    }
   }
+  @media screen  and (min-width:768px){
+    
+   background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-bg-tab.jpg);
+      @media (min-device-screen-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-bg-tab2x.jpg);
+    }
+  }
+
+  @media screen and(min-width:1200px){
+    width:100%;
+    height: 100%;
+    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-bg.jpg);
+      @media (min-device-screen-ratio: 2),
+    (min-resolution: 192dpi),
+    (min-resolution: 2dppx){
+      background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    url(../images/hero-bg2x.jpg);
+  }
+}
+
+.hero__desicions {
+  margin-left: auto;
+  margin-right: auto;
+
+  width: 696px;
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.4;
+  color: #ffffff;
   
-  .hero__desicions {
-    margin-left: auto;
-    margin-right: auto;
-  
+  @media screen and(min-width:320px){
+    width: 360px;
+    height: 84px;
+
+    font-size: 26px;
+    line-height: 1.6;
+    letter-spacing: 0.06em; 
+  }
+  @media screen and(min-width:768px){
+    width: 360px;
+    height: 84px;
+
+    font-size: 26px;
+    line-height: 1.6;
+    letter-spacing: 0.06em; 
+  }
+  @media screen and(min-width:1200px){
     width: 696px;
-    text-transform: uppercase;
-    font-weight: 900;
+    height: 120px;
+
     font-size: 44px;
     line-height: 1.4;
-    color: #ffffff;
   }
-  
-  .hero__button {
-    margin-top: 40px;
-    padding-top: 30px;
-  
-    background: #2196f3;
-    color: #ffffff;
-    line-height: 1.9;
-    font-family: inherit;
-    font-weight: 700;
-    font-size: 16px;
-    padding: 10px 32px;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    border: none;
-  }
+}
+
+.hero__button {
+  margin-top: 40px;
+  padding-top: 30px;
+
+  background: #2196f3;
+  color: #ffffff;
+  line-height: 1.9;
+  font-family: inherit;
+  font-weight: 700;
+  font-size: 16px;
+  padding: 10px 32px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+}
+}
