--- a/sass/layouts/_portfolio-btns.scss
+++ b/sass/layouts/_portfolio-btns.scss
@@ -3,6 +3,15 @@
   
     display: flex;
     justify-content: center;
+    @media screen and(min-width:480px){
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
+    @media screen and(min-width:768px){
+     display: flex;
+     justify-content: center;
+    }
   }
   
   .btns-links__buttons{
@@ -35,5 +44,13 @@
       margin-right: 0;
     }
   }
+.btns{
+  @media screen and(min-width:480px){
+    margin-top: 15px;
+  }
+  @media screen and(min-width:768px){
+    margin-top: 0;
+  }
+}  
 
   
