--- a/sass/layouts/_portfolio-cards.scss
+++ b/sass/layouts/_portfolio-cards.scss
@@ -17,6 +17,14 @@
     flex-wrap: wrap;
     margin-bottom: -30px;
     margin-left: -30px;
+    @media screen and(min-width:480px){
+      display: flex;
+      flex-direction: column;
+      width: 450px;
+    }
+    @media screen and(min-width:768px){
+      width: 768px;
+    }
   }
   
   .projects__item {
@@ -27,7 +35,14 @@
     width: 370px;
     height: 404px;
 
- 
+    @media screen and(min-width:480px){
+      width: 450px;
+      height: 404px;
+    }
+    @media screen and(min-width:768px){
+      width: 354px;
+      height: 404px;
+    }
     
     & a {
       text-decoration: none;
@@ -35,6 +50,7 @@
     
       transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+   
   }
   
   .projects > .projects__item {
