--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -1,10 +1,25 @@
 .team {
     background-color: #f5f4fa;
-  }
+    img{
+      width: 100%;
+    }
+}
   
   .teamlist{
-    display: flex;
-    gap: 30px;
+    @media screen and(min-width:480px){
+      width: 450px;
+    }
+    @media screen and(min-width:768px){
+      width: 768px;
+      display: flex;
+      flex-wrap: wrap;
+      gap: 30px;
+    }
+    @media screen and(min-width:1200px){
+      width: 1170px;
+      display: flex;
+      flex-wrap: nowrap;
+    }
   }
   
   .team__topic {
@@ -22,6 +37,22 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: #fff;
+    @media screen and(min-width:480px){
+      width: 450px;
+      height: 622px;
+      margin-bottom: 30px;
+      &:nth-last-child{
+        margin-bottom: 0;
+      }
+    }
+    @media screen and(min-width:768px){
+      width: 354px;
+      height: 536px;
+    }
+    @media screen and(min-width:1200px){
+      width: 270px;
+      height: 428px;
+    }
   }
   
   .teamlist__container {
@@ -81,6 +112,6 @@
     background-color: #2196f3;
   }
   }
-
+  
   
   
