--- a/css/main.css
+++ b/css/main.css
@@ -25,21 +25,8 @@
 
 .footer {
   background-color: #2f303a;
-}
-@media screen and (min-width: 480px) {
-  .footer {
-    height: 606px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .footer {
-    height: 463px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .footer {
-    height: 252px;
-  }
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 @media screen and (min-width: 768px) {
@@ -372,7 +359,7 @@ textarea::placeholder {
   top: 0;
   left: 0;
   width: 100%;
-  height: 796px;
+  height: 100%;
   padding: 48px 40px;
   background-color: #fff;
   -webkit-transform: translateX(100%);
@@ -383,7 +370,8 @@ textarea::placeholder {
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
 }
 .mobile-menu.is-open {
-  display: none;
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
 }
 @media screen and (min-width: 768px) {
   .mobile-menu {
@@ -552,9 +540,10 @@ img {
     height: 80px;
   }
 }
-@media screen and (min-width: 1200px) {
+@media screen and (min-width: 768px) {
   .header {
-    height: 80px;
+    padding-top: 18px;
+    padding-bottom: 18px;
   }
 }
 
@@ -582,6 +571,7 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
+    gap: 0;
   }
 }
 
@@ -593,7 +583,6 @@ img {
 
 /* logo-website */
 .nav__webstudio {
-  margin-left: 15px;
   font-family: Raleway;
   font-weight: 700;
   color: black;
@@ -710,7 +699,6 @@ img {
 }
 
 .contact__item {
-  margin-right: 50px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -719,11 +707,16 @@ img {
 .contact__item:last-child {
   margin-right: 0px;
 }
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) {
   .contact__item {
     margin-bottom: 10px;
   }
   .contact__item:last-child {
+    margin-bottom: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .contact__item {
     margin-bottom: 0;
   }
 }
@@ -803,10 +796,8 @@ img {
   margin-right: auto;
   background-repeat: no-repeat;
 }
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 767px) {
   .hero {
-    width: 480px;
-    height: 400px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -816,9 +807,11 @@ img {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
+    padding-top: 118px;
+    padding-bottom: 118px;
   }
 }
-@media screen and (max-width: 480px) and (min-device-screen-ratio: 2), screen and (max-width: 480px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 480px) and (min-resolution: 192dpi), screen and (max-width: 480px) and (min-resolution: 2dppx) {
+@media screen and (max-width: 767px) and (min-device-screen-ratio: 2), screen and (max-width: 767px) and (-webkit-min-device-pixel-ratio: 2), screen and (max-width: 767px) and (min-resolution: 192dpi), screen and (max-width: 767px) and (min-resolution: 2dppx) {
   .hero {
     background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg-mob2x.jpg);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-mob2x.jpg);
@@ -828,6 +821,9 @@ img {
   .hero {
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg-tab.jpg);
     background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg-tab.jpg);
+    padding-top: 118px;
+    padding-bottom: 118px;
+    background-repeat: no-repeat;
   }
 }
 @media screen and (min-width: 768px) and (min-device-screen-ratio: 2), screen and (min-width: 768px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (min-resolution: 2dppx) {
@@ -842,6 +838,8 @@ img {
     height: 100%;
     background: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url(../images/hero-bg.jpg);
     background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero-bg.jpg);
+    padding-top: 200px;
+    padding-bottom: 200px;
   }
 }
 @media screen and (min-width: 1200px) and (min-device-screen-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
@@ -902,14 +900,8 @@ img {
   border: none;
 }
 
-@media screen and (min-width: 480px) {
-  .particulars {
-    width: 450px;
-  }
-}
 @media screen and (min-width: 768px) {
   .particulars {
-    width: 768px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -923,7 +915,6 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    width: 1170px;
   }
 }
 
@@ -955,6 +946,10 @@ img {
 @media screen and (min-width: 480px) {
   .particulars__item {
     width: 450px;
+    margin-bottom: 30px;
+  }
+  .particulars__item:last-child {
+    margin-bottom: 0;
   }
 }
 @media screen and (min-width: 768px) {
@@ -1132,14 +1127,8 @@ img {
   width: 100%;
 }
 
-@media screen and (min-width: 480px) {
-  .teamlist {
-    width: 450px;
-  }
-}
 @media screen and (min-width: 768px) {
   .teamlist {
-    width: 768px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1150,7 +1139,6 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .teamlist {
-    width: 1170px;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -1176,10 +1164,8 @@ img {
   border-radius: 0px 0px 4px 4px;
   background-color: #fff;
 }
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .teamlist__item {
-    width: 450px;
-    height: 622px;
     margin-bottom: 30px;
   }
   .teamlist__item:nth-last-child {
@@ -1189,13 +1175,11 @@ img {
 @media screen and (min-width: 768px) {
   .teamlist__item {
     width: 354px;
-    height: 536px;
   }
 }
 @media screen and (min-width: 1200px) {
   .teamlist__item {
     width: 270px;
-    height: 428px;
   }
 }
 
@@ -1310,6 +1294,16 @@ img {
   width: 170px;
   height: 92px;
 }
+@media screen and (max-width: 767px) {
+  .clients__items {
+    width: 210px;
+  }
+}
+@media screen and (max-width: 1199px) {
+  .clients__items {
+    width: 226px;
+  }
+}
 
 .clients__links {
   display: -webkit-box;
@@ -1349,7 +1343,6 @@ img {
     -webkit-box-pack: center;
         -ms-flex-pack: center;
             justify-content: center;
-    padding-top: 66px;
     font-family: "Raleway";
     font-style: normal;
     font-weight: 700;
@@ -1461,7 +1454,7 @@ img {
 }
 
 /*social links*/
-@media screen and (min-width: 480px) {
+@media screen and (max-width: 767px) {
   .soc-container {
     text-align: center;
     margin-top: 52px;
@@ -1531,7 +1524,6 @@ img {
 @media screen and (min-width: 480px) {
   .sub-cont {
     text-align: center;
-    margin-top: 60px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -1800,42 +1792,10 @@ input:focus::-webkit-input-placeholder {
   margin-bottom: -30px;
   margin-left: -30px;
 }
-@media screen and (min-width: 480px) {
-  .projects {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    width: 450px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .projects {
-    width: 768px;
-  }
-}
-
 .projects__item {
   margin-bottom: 30px;
   margin-left: 30px;
   border: 1px #eeeeee;
-  width: 370px;
-  height: 404px;
-}
-@media screen and (min-width: 480px) {
-  .projects__item {
-    width: 450px;
-    height: 404px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .projects__item {
-    width: 354px;
-    height: 404px;
-  }
 }
 .projects__item a {
   text-decoration: none;
@@ -1845,10 +1805,10 @@ input:focus::-webkit-input-placeholder {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.projects > .projects__item {
-  -ms-flex-preferred-size: calc(33.3333333333% - 30px);
-      flex-basis: calc(33.3333333333% - 30px);
+@media screen and (max-width: 1199px) {
+  .projects__item {
+    margin: 0;
+  }
 }
 
 .projects__cont {
