--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -20,13 +20,13 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 796px;
+  height: 100%;
   padding: 48px 40px;
   background-color: #fff;
   transform: translateX(100%);
     transition: transform 250ms ease-in-out;
   &.is-open{
-    display: none;
+    transform: translateX(0);
   }
   @media screen and(min-width:768px){
     display: none;
