--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -28,6 +28,12 @@
   .clients__items {
     width: 170px;
     height: 92px;
+    @media screen and(max-width:767px){
+      width: 210px;
+    }
+    @media screen and(max-width:1199px){
+      width: 226px;
+    }
   }
   
   .clients__links {
