--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -12,14 +12,12 @@
   margin-right: auto;
   background-repeat: no-repeat;
 
-  @media screen and(max-width:480px){
-    width: 480px;
-    height: 400px;
-
+  @media screen and(max-width:767px){
     display: flex;
     justify-content: center;
     align-items: center;
-    // background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
+    padding-top: 118px;
+    padding-bottom: 118px;    // background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     // url(../images/hero-bg-mob.jpg);
     @media (min-device-screen-ratio: 2),
     (min-resolution: 192dpi),
@@ -32,6 +30,9 @@
     
    background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero-bg-tab.jpg);
+    padding-top: 118px;
+    padding-bottom: 118px;  
+    background-repeat: no-repeat;
       @media (min-device-screen-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx){
@@ -45,6 +46,8 @@
     height: 100%;
     background: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)),
     url(../images/hero-bg.jpg);
+    padding-top: 200px;
+    padding-bottom: 200px;  
       @media (min-device-screen-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx){
