--- a/sass/layouts/_portfolio-cards.scss
+++ b/sass/layouts/_portfolio-cards.scss
@@ -18,12 +18,9 @@
     margin-bottom: -30px;
     margin-left: -30px;
     @media screen and(min-width:480px){
-      display: flex;
-      flex-direction: column;
-      width: 450px;
+      // display: flex;
     }
     @media screen and(min-width:768px){
-      width: 768px;
     }
   }
   
@@ -32,30 +29,23 @@
     margin-left: 30px;
     border: 1px #eeeeee;
   
-    width: 370px;
-    height: 404px;
-
-    @media screen and(min-width:480px){
-      width: 450px;
-      height: 404px;
-    }
-    @media screen and(min-width:768px){
-      width: 354px;
-      height: 404px;
-    }
-    
+    // width: 370px;
+    // height: 404px;
     & a {
       text-decoration: none;
       display: block;
     
       transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-   
+
+    @media screen and(max-width:1199px){
+      margin: 0;
+    }
   }
   
-  .projects > .projects__item {
-    flex-basis: calc(100% / 3 - 30px);
-  }
+  // .projects > .projects__item {
+  //   flex-basis: calc(100% / 3 - 30px);
+  // }
   .projects__cont{
     padding-top: 20px;
     padding-bottom: 20px;
