--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -7,16 +7,13 @@
   
   .teamlist{
     @media screen and(min-width:480px){
-      width: 450px;
     }
     @media screen and(min-width:768px){
-      width: 768px;
       display: flex;
       flex-wrap: wrap;
       gap: 30px;
     }
     @media screen and(min-width:1200px){
-      width: 1170px;
       display: flex;
       flex-wrap: nowrap;
     }
@@ -37,9 +34,7 @@
       0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     background-color: #fff;
-    @media screen and(min-width:480px){
-      width: 450px;
-      height: 622px;
+    @media screen and(max-width:767px){
       margin-bottom: 30px;
       &:nth-last-child{
         margin-bottom: 0;
@@ -47,11 +42,9 @@
     }
     @media screen and(min-width:768px){
       width: 354px;
-      height: 536px;
     }
     @media screen and(min-width:1200px){
       width: 270px;
-      height: 428px;
     }
   }
   
