--- a/sass/layouts/_clients.scss
+++ b/sass/layouts/_clients.scss
@@ -26,13 +26,15 @@
     }
   }
   .clients__items {
-    width: 170px;
     height: 92px;
     @media screen and(max-width:767px){
       width: 210px;
     }
-    @media screen and(max-width:1199px){
+    @media screen and(min-width:768px){
       width: 226px;
+    }
+    @media screen and(min-width:1200px){
+      width: 170px;
     }
   }
   
