--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -32,7 +32,8 @@
     url(../images/hero-bg-tab.jpg);
     padding-top: 118px;
     padding-bottom: 118px;  
-    background-repeat: no-repeat;
+    // background-repeat: no-repeat;
+    // background-position: center;
       @media (min-device-screen-ratio: 2),
     (min-resolution: 192dpi),
     (min-resolution: 2dppx){
