--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,10 +1,11 @@
 .menu-toggle{
-  position: absolute;
   width: 40px;
   height: 40px;
   border: none;
   background-color: transparent;
-  left: 425px;
+  // left: 425px;
+  margin-left: auto;
+  margin-right: 15px;
   & .is-close{
     display: none;
   }
