--- a/sass/layouts/_particulars.scss
+++ b/sass/layouts/_particulars.scss
@@ -35,7 +35,7 @@
   }
   
   .particulars__item {
-    @media screen and(min-width:480px){
+    @media screen and(max-width:767px){
       width: 450px;
       margin-bottom: 30px;
       &:last-child{
