--- a/sass/layouts/_team.scss
+++ b/sass/layouts/_team.scss
@@ -36,7 +36,7 @@
     background-color: #fff;
     @media screen and(max-width:767px){
       margin-bottom: 30px;
-      &:nth-last-child{
+      &:last-child{
         margin-bottom: 0;
       }
     }
