--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -2,13 +2,17 @@
     border-bottom: 1px solid #ececec;
     padding-top: 25px;
     padding-bottom: 25px;
-    @media screen and(max-width:768px){
+    @media screen and(max-width:767px){
       display: flex;
       height: 80px;
     }
     @media screen and(min-width:768px) {
       padding-top: 18px;
       padding-bottom: 18px;
+    }
+    @media screen and(min-width:1200px){
+      padding-top: 25px;
+    padding-bottom: 25px;
     }
   }
     .nav {
@@ -147,6 +151,7 @@
     margin-left: auto;
     align-self: center;
     margin-left: auto;
+    gap: 30px;
     }
     
   }
