--- a/sass/layouts/_portfolio-cards.scss
+++ b/sass/layouts/_portfolio-cards.scss
@@ -15,13 +15,21 @@
   .projects {
     display: flex;
     flex-wrap: wrap;
-    margin-bottom: -30px;
-    margin-left: -30px;
-    @media screen and(min-width:480px){
-      // display: flex;
+    @media screen and(max-width:767px){
+      display: flex;
+      gap: 30px;
     }
     @media screen and(min-width:768px){
+      display: flex;
+      gap: 30px;
     }
+    @media screen and(min-width:1200px){
+      
+    // margin-bottom: -30px;
+    // margin-left: -30px;
+    }
+      
+    
   }
   
   .projects__item {
@@ -37,8 +45,11 @@
     
       transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
-
-    @media screen and(max-width:1199px){
+     @media screen and(max-width:767px){
+      margin-left: 0;
+    }
+    @media screen and(min-width:768px){
+      
       margin: 0;
     }
   }
