--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -4,12 +4,9 @@
     padding-bottom: 25px;
     @media screen and(max-width:767px){
       display: flex;
-      height: 80px;
+      // height: 80px;
     }
-    @media screen and(min-width:768px) {
-      padding-top: 18px;
-      padding-bottom: 18px;
-    }
+    
     @media screen and(min-width:1200px){
       padding-top: 25px;
     padding-bottom: 25px;
