--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -1,10 +1,20 @@
 .header {
     border-bottom: 1px solid #ececec;
-    padding-top: 25px;
-    padding-bottom: 25px;
     @media screen and(max-width:767px){
       display: flex;
+      align-items: center;
       // height: 80px;
+       padding-top: 16px;
+    padding-bottom: 16px;
+    }
+    @media screen and(min-width:768px){
+      padding-top: 18px;
+      padding-bottom: 18px;
+    }
+    @media screen and(min-width:1200px){
+       padding-top: 25px;
+    padding-bottom: 25px;
+   
     }
   }
     .nav {
