--- a/sass/layouts/_portfolio-cards.scss
+++ b/sass/layouts/_portfolio-cards.scss
@@ -47,6 +47,7 @@
     }
      @media screen and(max-width:767px){
       margin-left: 0;
+      margin-bottom: 0;
     }
     @media screen and(min-width:768px){
       
